# xasm-plus-plus

./: .clang-tidy  .claudeignore  .gitignore  .gitmodules  CLAUDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  DEVELOPER_EDITION_SETUP.md  FEATURES.md  LICENSE  Makefile  PHASE1_SUMMARY.md  PHASE6C1_SUMMARY.md  README.md  RELEASE-NOTES-A2OSX-FIXES.md  SESSION_SUMMARY.md  SONARQUBE_DEVELOPER_EDITION_UPGRADE.md  SONARQUBE_SETUP.md  TASK_COMPLETE.md  TASK_N3_COMPLETION.md  VERIFICATION_REPORT.md  docker-compose.sonarqube-dev.yml  fix_sign_comparisons.py  install_manifest.txt  run-clang-tidy.sh  seqtable_test.lst  sonar-project.properties  sonar.env.example  upgrade-to-sonarqube-developer.sh
.ai/: PRE-PUSH-CHECKLIST.md  repo-overrides.md  work-summary.md
.ai/scripts/: pre-push.sh
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  deploy-docs.yml
disk-images/: POP_BOOT.dsk  POP_DATA.dsk  README.md
docs/: CODING-STANDARDS.md  NAMING_AUDIT.md  NAMING_CONVENTIONS_SUMMARY.md  OUTPUT_FORMATS.md  PERFORMANCE.md  README.md  STYLE_GUIDE.md  doxygen-documentation-summary.md  phase1-completion.md
docs/adr/: 001-directive-handler-pattern.md  002-component-based-parser-refactoring.md  (+2 more)
examples/: README.md  hello_6502.asm  merlin_demo.asm
scripts/: reference_runner.sh  regenerate_golden_binaries.py
src/: CMakeLists.txt  cli_parser.cpp  main.cpp
src/common/: conditional_assembler.cpp  expression_parser.cpp  macro_processor.cpp
src/core/: assembler.cpp  atom.cpp  error_formatter.cpp  expression.cpp  parse_utils.cpp  section.cpp  segment_manager.cpp  symbol.cpp
src/cpu/: cpu_6502.cpp  cpu_65816.cpp  cpu_65c02.cpp  cpu_6809.cpp  cpu_z80.cpp
src/cpu/m6502/: cpu_6502.cpp  cpu_6502_branch_handler.cpp  cpu_65816.cpp  cpu_65c02.cpp
src/cpu/m6809/: cpu_6809.cpp
src/cpu/z80/: cpu_z80.cpp
src/directives/: merlin_directives.cpp
src/directives/scmasm/: scmasm_directive_handlers.cpp
src/output/: binary_output.cpp  coco_loadm_writer.cpp  intel_hex_writer.cpp  listing_output.cpp  output_writer.cpp  srec_writer.cpp  symbol_output.cpp  trsdos_writer.cpp
src/syntax/: core_directive_handlers.cpp  directive_registry.cpp  edtasm_directive_handlers.cpp  edtasm_directive_handlers.h  edtasm_m80_plusplus_syntax.cpp  edtasm_simple_directive_handlers.cpp  edtasm_syntax.cpp  flex_syntax.cpp  merlin_directive_handlers.cpp  merlin_directives.cpp  merlin_syntax.cpp  parser_error_utils.cpp  scmasm_directive_handlers.cpp  scmasm_expression_utils.cpp  scmasm_syntax.cpp  simple_directive_handlers.cpp  simple_syntax.cpp
src/syntax/edtasm/: edtasm_syntax.cpp
src/syntax/edtasm_m80_plusplus/: edtasm_directive_handlers.h
src/syntax/flex/: macro_processor.cpp
src/syntax/merlin/: merlin_syntax.cpp
src/syntax/motorola/: flex_syntax.cpp
src/syntax/scmasm/: scmasm_syntax.cpp
src/syntax/z80_universal/: z80_universal_syntax.cpp
src/utils/: string_utils.cpp
tests/: CMakeLists.txt  README.md  placeholder_test  placeholder_test.cpp
tests/e2e/: README.md
tests/e2e/apple2/a2osx/: README.md
tests/e2e/apple2/prince_of_persia/: POP_QUIRKS.md  README.md  build-disks.sh  build_disks.py  generate_reference_binaries.sh  test_pop_complete.py
tests/integration/: 01_hello.asm  02_labels.asm  03_data.asm  04_org.asm  05_comments.asm  06_pop_eq.asm  07_pop_subs.asm  08_usr_directive.asm  09_xc_directive.asm  10_macro_simple.asm  11_macro_params.asm  12_macro_local.asm  CMakeLists.txt  README.md  z80_real_code_samples.cpp
tests/integration/a2osx/: BUG-001-symbol-addressing.md  BUG-002-bs-directive.md  BUG-003-expression-support.md  BUG-FIXES.md  INDEX.md  NEXT_STEPS.md  QUICKSTART.md  README.md  SUMMARY.md  bug001_repro.S  bug002_repro.S  bug003_lo_repro.S  bug003_offset_repro.S  sample_complex.S  sample_medium.S  sample_simple.S  test_bs.S  test_bug001.S  test_bug003.S  test_data_as.S  test_data_da.S  test_data_hs.S  test_eq.S  test_expr_hi.S  test_expr_lo.S  test_expr_offset.S  test_minimal.S  test_symbols.S  validation_suite.py
tests/integration/binary_compat/: CMakeLists.txt  README.md  cmake_test_discovery_104ca59bf3.json  regenerate_golden.sh  test_current_features.cpp  test_merlin_compat.cpp  test_scmasm_compat.cpp
tests/integration/binary_compat/asm_sources/: opcodes.asm  opcodes_65816.asm  opcodes_65c02.asm
tests/integration/binary_compat/framework/: binary_compat_test.h
tests/integration/binary_compat/test_sources/merlin/6502/: 01_basic_ops.asm  02_addressing_modes.asm  03_data_directives.asm  04_macros.asm  05_conditionals.asm
tests/integration/binary_compat/test_sources/scmasm/6502/: 01_basic_ops.asm  02_addressing_modes.asm  03_data_directives.asm  04_macros.asm  05_conditionals.asm  06_labels.asm  07_loops.asm
tests/integration/binary_compat/test_sources/scmasm/65816/: 01_65816_specific.asm  02_65816_addressing.asm
tests/integration/binary_compat/test_sources/scmasm/65c02/: 01_65c02_specific.asm  02_65c02_addressing.asm
tests/regression/: README.md  run_regression.py
tests/regression/merlin/: immediate_symbol_ref.asm
tests/unit/: CMakeLists.txt  test_65816_extended.cpp  test_address.cpp  test_assembler.cpp  test_atom.cpp  test_binary_compat.cpp  test_binary_output.cpp  test_cli.cpp  test_coco_loadm_writer.cpp  test_conditional_assembler.cpp  test_const_correctness.cpp  test_const_correctness_syntax.cpp  test_const_correctness_utility_methods.cpp  test_core_directive_handlers.cpp  test_cpu6502.cpp  test_cpu6809.cpp  test_cpu6809_indexed.cpp  test_cpu_error_utils.cpp  test_cpu_z80.cpp  test_current_location.cpp  test_directive_error_utils.cpp  test_directive_registry.cpp  test_edtasm_m80_plusplus_syntax.cpp  test_edtasm_syntax.cpp  test_encoding_utils.cpp  test_error_formatter.cpp  test_error_reporting.cpp  test_exception_safety.cpp  test_expression.cpp  test_expression_parser.cpp  test_expression_utils.cpp  test_flex_conditionals.cpp  test_flex_macros.cpp  test_flex_syntax.cpp  test_inb_path_mapping.cpp  test_intel_hex_writer.cpp  test_listing_output.cpp  test_macro_processor.cpp  test_merlin_syntax.cpp  test_mnemonic_constants.cpp  (+25 more)
(+212 files in other folders)
